update github link

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
         <meta charset="utf-8">
     </head>
     <body>
-      <p>
-        <a href="slides.html">在线演讲稿</a>
-        <a href="slides.html">演讲稿PDF 以及源码下载</a>
+      <ul>
+        <li>
+          <a href="slides">在线演讲稿</a>
+        </li>
+        <li>
+          <a href="https://github.com/kunkun12/vue-demo">演讲稿PDF 以及源码下载</a>
+        </li>
+      </ul>
+
+      <p style='font-size:30px'>
+        Demo
       </p>
     <ul>
       <li>
@@ -42,9 +50,5 @@
       </li>
     </ul>
 
-
-    <div style=''>
-
-    </div>
     </body>
 </html>
